DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2010-05-29 patrickh     Fixed compatibility with Autoconf 2.64 and newer. This
                        required splitting the functionality of the macros
                        DPP_PROG_CC and DPP_PROG_CXX into
                        DPP_CHECK_CC_FALLBACKS & DPP_PROG_CC and
                        DPP_CHECK_CXX_FALLBACKS & DPP_PROG_CXX. The former
                        accepts the same arguments as the 2.1 Doozer++ version
                        of the latter.
                        NEW VERSION: 2.2.0
2009-12-02 patrickh     Fixed compatibility with Autoconf 2.63 and newer.
                        NEW VERSION: 2.1.14
2009-10-25 patrickh     Added support for Mac OS X Snow Leopard.
                        NEW VERSION: 2.1.13
2007-05-30 patrickh     Added support for x86_64 binaries on Mac OS X.
                        NEW VERSION: 2.1.12
2007-05-30 patrickh     Added support for DragonFly (a fork of FreeBSD 4).
                        NEW VERSION: 2.1.11
2006-12-19 patrickh     Fixed a serious bug in DPP_ABI_SETUP.
                        NEW VERSION: 2.1.10
2006-11-20 patrickh     Extended the NSPR detection tests to provide more
                        information to the caller regarding the NSPR
                        installation.
                        NEW VERSION: 2.1.9
2006-11-20 patrickh     Fixed NSPR detection tests.
                        NEW VERSION: 2.1.8
2006-11-09 patrickh     Extended the tests for OpenAL, ALUT, GLUT, NSPR, and
                        Audiere to be smarter about 64-bit installations and to
                        report the directory containing the library (or
                        libraries) for the package.
                        NEW VERSION: 2.1.7
2006-11-09 patrickh     Extended DPP_HAVE_GLUT to handle the Mac OS X GLUT
                        framework.
                        NEW VERSION: 2.1.6